tests/errors/validation/literal-inside-namespace.fn
---
Description: Literal inside a namespace, with usage
Expected: FN2000, FN3203
---

namespace BadNs
{
    literal px(value: i32) -> i32
    {
        return value
    }
}

type Program
{
    static fn Main -> i32
    {
        return BadNs.px
    }
}
